--- a/25居委会报到.md
+++ b/25居委会报到.md
@@ -1,6 +1,6 @@
 #### **1. 查询所属居委会**
 
-本章节所称“居委会”，在苏黎世市区（下图中彩色部分）叫做“Kreisbüro”（3、4、5、6、9、10、11、12区）或者“Personenmeldeamt”（1、2、7、8区），在苏黎世郊区（下图中白色部分）叫做“Einwohnerkontrolle”，为便于表述，下文在不需要区分的情况下将“Kreisbüro”“Personenmeldeamt”统称为“Kreisbüro”，将“Kreisbüro”“Personenmeldeamt”“Einwohnerkontrolle”统称为“居委会”。
+*本章节所称“居委会”，在苏黎世市区（下图中彩色部分）叫做“Kreisbüro”（3、4、5、6、9、10、11、12区）或者“Personenmeldeamt”（1、2、7、8区），在苏黎世郊区（下图中白色部分）叫做“Einwohnerkontrolle”，为便于表述，下文在不需要区分的情况下将“Kreisbüro”“Personenmeldeamt”统称为“Kreisbüro”，将“Kreisbüro”“Personenmeldeamt”“Einwohnerkontrolle”统称为“居委会*”。
 ![](.topwrite/assets/image_1682633334979.png)
 
 ^
