--- a/99鸣谢.md
+++ b/99鸣谢.md
@@ -13,4 +13,4 @@
 |    俞玥   |                      落地 - 瑞士银行卡                      |
 |    凌晞   |                      生活 - 苏黎世消费                      |
 
-^
+*待修改，按章节分别credit*
