--- a/28移民局录指纹.md
+++ b/28移民局录指纹.md
@@ -1,5 +1,7 @@
-*与[“居委会报到”部分](<25居委会报到.md>)相同，本章节所称“居委会”，在苏黎世市区叫做“Kreisbüro”（3、4、5、6、9、10、11、12区）或者“Personenmeldeamt”（1、2、7、8区），在苏黎世郊区叫做“Einwohnerkontrolle”，为便于表述，下文在不需要区分的情况下将“Kreisbüro”“Personenmeldeamt”统称为“Kreisbüro”，将“Kreisbüro”“Personenmeldeamt”“Einwohnerkontrolle”统称为“居委会”。*
+*与*[“居委会报到”部分](25居委会报到.md)*相同，本章节所称“居委会”，在苏黎世市区叫做“Kreisbüro”（3、4、5、6、9、10、11、12区）或者“Personenmeldeamt”（1、2、7、8区），在苏黎世郊区叫做“Einwohnerkontrolle”，为便于表述，下文在不需要区分的情况下将“Kreisbüro”“Personenmeldeamt”统称为“Kreisbüro”，将“Kreisbüro”“Personenmeldeamt”“Einwohnerkontrolle”统称为“居委会*”。
+
 ^
+
 在居委会完成注册后，需要前往苏黎世移民局办理居留卡（DE: Aufenthaltsbewilligung; EN: Residence Permit），才算正式完成整个注册流程。
 
 ^
@@ -10,7 +12,7 @@
 ^
 
 此外，如希望咨询移民局的，其联系方式如下：
-**移民局网上联系表格**：[Kontaktformular Migrationsamt](<https://www.zh.ch/de/migration-integration/kontaktformularmigrationsamt.html>)
+**移民局网上联系表格**：[Kontaktformular Migrationsamt](https://www.zh.ch/de/migration-integration/kontaktformularmigrationsamt.html)
 通过该表格联系移民局，尤其是通过此方式提交材料审批的，移民局都会等审批完成后再回复，其耗时可能较长，因此必要时可拨打电话咨询审批进度。
 **移民局电话**: +41 43 259 88 00（瑞士时间星期一-星期五 08:00-12:00、13:00-16:30可用）
 拨打该电话，有很大概率会提示“所有雇员正忙，请稍后”，此时可耐心等待；如等待较长时间仍未接听的，可尝试挂断并再次拨打，并在再次拨打时切换服务语言（如先前选择英语，第二次则可选择德语；无需担心语言不通问题，至少德语和英语岗位上的客服人员都熟练掌握这两种语言）。如仍然无效的，建议等到其下次开始上班时间拨打。
@@ -24,7 +26,7 @@
 ※一张护照尺寸的照片
 ※学校开具的在读证明（DE: Immatrikulationsbestätigung; EN: Enrolment Confirmation)
 ※租房合同
-※Kreisbüro注册证明（Meldebestätigung，见[“居委会报到”部分](<25居委会报到.md>)）以及预约单
+※Kreisbüro注册证明（Meldebestätigung，见[“居委会报到”部分](25居委会报到.md)）以及预约单
 ※100瑞郎左右的手续费（刷卡现金均可）
 ※21000瑞郎的存款证明（与办理签证一样需要存入指定银行，见:attachment[beh.pdf]{src=".topwrite/assets/beh_1682637418454.pdf" size="281.56 kB"}）
 
@@ -39,7 +41,8 @@
 ![](.topwrite/assets/image_1682631028316.png)
 ![](.topwrite/assets/image_1682631039883.png)
 其中，居留卡背面包含有“ZEMIS Nr.”和“Kant. Referenz”，这两个号码在办理诸多业务时（如：通过Kontakt Formular或电话联系移民局）都需要提供。
-一般地，在瑞留学生获得的居留卡有效期为1年，临近到期时移民局会向你致信（Verfallsanzeige B，此处B对应居留证类型）要求你办理延期，届时按照信中要求，携带相关材料（信中会有说明）到对应的居委会办理即可。根据相关要求，办理延期时账户内余额不得低于21000瑞郎（即：不允许使用先前办理签证时使用的存款证明来办理延期）。关于办理延期可参考：[Verlängerung des Aufenthalts B](<https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/internationale-kundschaft/verlaengerung_des_aufenthals_b.html>)
+一般地，在瑞留学生获得的居留卡有效期为1年，临近到期时移民局会向你致信（Verfallsanzeige B，此处B对应居留证类型）要求你办理延期，届时按照信中要求，携带相关材料（信中会有说明）到对应的居委会办理即可。根据相关要求，办理延期时账户内余额不得低于21000瑞郎（即：不允许使用先前办理签证时使用的存款证明来办理延期）。关于办理延期可参考：[Verlängerung des Aufenthalts B](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/internationale-kundschaft/verlaengerung_des_aufenthals_b.html)
+
 ^
 
 参考网址：
