--- a/00欢迎页.md
+++ b/00欢迎页.md
@@ -1,6 +1,6 @@
 :-: ![](.topwrite/assets/20171031_ACSSZ_Logo_01.png =390)
 
-:-: **欢迎参加2023苏黎世新生在线答疑会**！
+:-: **欢迎参加2023苏黎世新生互动答疑会**！
 
 :-: 2023年4月29日
 
