--- a/11行李准备.md
+++ b/11行李准备.md
@@ -58,7 +58,7 @@
 （瑞士购买和国内购买差距不大或不便携带，根据个人需求决定要不要带）
 
 **电脑**：有换代计划的话推荐学期初针对高校学生的Neptun项目，提供相对低价的高配置产品。下单到配送需要一段时间，建议国内带一个备用。注意高端电子产品价格一般国内更为便宜，但存在无法在瑞士保修的可能
-**正装**：可以考虑直接去隔壁意大利定制，使用场合不多，但做Pre或者参加商业活动时总有机会用到。苏黎世的HM也可以买到较为实惠的正装。
+**正装**：可以考虑直接去隔壁意大利定制，使用场合不多，但做Pre或者参加商业活动时总有机会用到。苏黎世的HM也可以买到物美价廉的正装，或者选择HM网购也可以。
 **晚礼服**：同样可以在隔壁意大利搞定，可用来出席各种晚宴、舞会等，比如每年11月， 会在ETHZ举办欧洲最大学生舞会polyball。
 **旗袍**：可用于文化节或正式的特殊的场合。
 
