--- a/24找房租房.md
+++ b/24找房租房.md
@@ -9,10 +9,10 @@
 
 #### **2**. **租房步骤**
 
-1. 网上自行筛选合适自己的房子（网站见iii. 找房途径和渠道）。尽早开始，结合自身情况考虑价格、距离、起租日期等因素
-2. 发邮件，海投（最好写一个cover letter 介绍自己，比如经历、背景、爱好、生活习惯（爱干净，安静），努力争取线下看房机会）数量在30到上百封都有可能，这个比较看运气（7、8、9月为找房旺季）。woko、juwo这类机构房源则是填表，等待联系
-3. 如果获得机会看房并对房子满意，签写租房意向书。建议线下看房的时候多和房东聊天争取好感，从众多看房者中脱颖而出，房东才有可能把房子租给你。租房给谁基本全凭房东喜好决定，偶尔会有房子是按照先到先得的顺序给的
-4. 等待房东回复
+1. 网上自行筛选合适自己的房子（网站见iii. 找房途径和渠道）。尽早开始，结合自身情况考虑价格、距离、起租日期等因素。
+2. 发邮件，海投（最好写一个cover letter 介绍自己，比如经历、背景、爱好、生活习惯（爱干净，安静），努力争取线下看房机会）数量在30到上百封都有可能，这个比较看运气（7、8、9月为找房旺季）。woko、juwo这类机构房源则是填表，等待联系。
+3. 如果获得机会看房并对房子满意，签写租房意向书。建议线下看房的时候多和房东聊天争取好感，从众多看房者中脱颖而出，房东才有可能把房子租给你。租房给谁基本全凭房东喜好决定，偶尔会有房子是按照先到先得的顺序给的。
+4. 等待房东回复。
 
 ^
 
