--- a/32医疗相关.md
+++ b/32医疗相关.md
@@ -112,13 +112,15 @@ UZH在Central的诊所可以预约打疫苗，如TBE（蜱虫疫苗），FLU，H
 
 （资料来源：各个保险公司官网，以及ETH官网整理的相关信息<https://ethz.ch/en/studies/international/after-arrival/health-insurance/nicht-eu.html> ）
 
-1\. Swisscare
+1\. Swisscare ***待补充详细信息***
 
-2\. Group Mutuel
+******
 
-"Group Mutuel"是一家瑞士的健康保险公司，提供广泛的健康保险计划，包括基本健康保险、牙科保险、旅行保险等。此外，该公司还提供其他相关服务，如在线健康咨询、健康风险评估等。
+2\. Groupe Mutuel
 
-（1） 地址：Widdergasse 1, 8001 Zürich
+Groupe Mutuel是一家瑞士健康保险公司，提供广泛的健康保险计划，包括基本健康保险、牙科保险、旅行保险等。
+
+（1）地址：Widdergasse 1, 8001 Zürich
 
 （2）保险种类及价格
 
@@ -134,15 +136,11 @@ UZH在Central的诊所可以预约打疫苗，如TBE（蜱虫疫苗），FLU，H
 |           | 100                   | 205           |
 |           | 0                     | 210           |
 
-\* Annual deductible：看病满多少钱可以报销。如：Annual deductible为500CHF，即一年看病累积费用达500CHF，大于500CHF的可以报销。若Annual deductible为0CHF，则可以全报。（大多看病费用都可以报，但牙医等一些费用是不能报销的）
+\* Annual deductible：年度免赔额，请参照[保险及豁免](27保险及豁免.md)第5小节内容。
 
-（3）购买方式
+^
 
-&#x20;  \- 线下购买。直接跟工作人员说你的需求，他们会介绍适合你的产品，然后让你填表。方便快捷。
-
-&#x20;  \- 线上购买。链接：<https://ethz.ch/de/studium/international/nach-ankunft/krankenversicherung/non-eu.html#par_textimage_1480546543>
-
-3\. 保险豁免
+3\. 保险豁免 ***和前文内容重复，将整理进之前章节***
 
 瑞士政府规定所有在瑞士居住的人都必须购买基本健康保险，包括留学生在内。留学生需在到达苏黎世的三个月内购买保险，如果不买保险会被强制上险，即收到巨额保单。因为上述保险不符合Federal Health Insurance Act (KVG)，只符合"Federal Insurance Contract Act" (VVG) law。因此，在购买上述保险后，你必须申请保险豁免。
 
@@ -167,11 +165,3 @@ UZH在Central的诊所可以预约打疫苗，如TBE（蜱虫疫苗），FLU，H
 ^
 
 大致流程如上，可能会因为保险公司不同而有出入。若有豁免相关问题，可直接联系保险公司以及政府相关部门，请他们协助解决。
-
-```
-
-
-```
-
-^
-^
