--- a/21交通票.md
+++ b/21交通票.md
@@ -45,7 +45,7 @@ ZVV使用分区计价的原则([分区地图](https://www.zvv.ch/zvv/en/travelca
 
 ^
 
-如果第一时间无法办理SwissPass，那么可以先通过APP或者购票机器买票先去住所，详见“2.公交APP”。这些APP使用信用卡支付，可以不绑定SwissPass直接购票。
+如果第一时间无法办理SwissPass，那么可以先通过APP或者购票机器买票先去住所，详见“2.公交APP”。这些APP使用信用卡支付，可以不绑定SwissPass直接购票。或者微信小程序"瑞士铁路SBB"应急.
 
 ^
 
