--- a/10申请签证.md
+++ b/10申请签证.md
@@ -1,65 +1,83 @@
 #### **1. 申请签证的时间**
 
-在收到录取通知书后，就可以开始准备申请签证的材料，ETH官网推荐入境前3个月递交申请，整个审核过程需 8-12 周。（*实际审核时间没这么长*？）
+在收到录取通知书后，就可以开始准备申请签证的材料。ETH官网推荐**最晚在计划入境前3个月**递交申请，整个审核过程理论需 8-12 周，根据经验，实际审核时长为1个月左右。
 
 ^
 
 #### **2. 申请材料**
 
-大体来说（*不够精确的表达，应该明确是哪里要求的，标出来源*）申请材料有以下几项，**但请详细阅读学校给出的清单** ，清单表可在链接里查看
+**请详细阅读学校给出的清单** ，清单可在下方链接里查看。以下仅为一般性总结及注意点，**请以学校官网信息作为申签指导**！
 
-* 申请表（national type D visa，链接中有下载表）
-* 护照（注意护照有效期，如有效期一年内，则建议换护照）
+* 申请表（National Type D Visa，链接中有下载表）
+* 护照（注意护照有效期，如有效期一年内，则建议先换护照）
 * 护照照片（背景+尺寸按使领馆要求）
 * 学校注册确认信
 * 简历（需注明语言水平）
 * 本科毕业证（如果毕业证不是英文或德文的，需要公证，两个学校要求有点不一样，请在链接里仔细查看，一般公证需要较长时间，请合理安排时间）
-* 动机信（避免明显的留瑞意向）
-* 毕业计划
+* 动机信
+* 毕业计划（**避免表达留瑞意向**）
 * 银行存款（请存入移民局[接受的银行](https://www.finma.ch/en/~/media/finma/dokumente/bewilligungstraeger/pdf/beh.pdf?la=de)中）
 
-**请详细阅读学校给出的清单**：
-
-（*ETH是和移民局合作的，准确说这份资料应该是ETH让移民局一起给出的*）
-
 > **ETH要求的申请材料（注意本科生和硕士生不一样**）<https://ethz.ch/en/studies/international/after-admission/immigration/visa.html>
+>
+> 这些信息由ETH与苏黎世州移民局合作编写，满足官方要求。
 >
 > ^
 >
 > **UZH要求的申请材料**
 >
 > <https://www.uzh.ch/cmsssl/en/studies/application/entry/guidelines.html>
+>
+> 本页提供的信息仅供参考，不保证完全准确。这些信息所依据的法规自上次审查以来可能已经发生变化。有关具有法律约束力的信息，请查阅联邦移民局的网站或联系瑞士驻你所在国的大使馆。
+>
+> ^
+>
+> **移民局可接受银行清单**
+>
+> <https://www.finma.ch/en/~/media/finma/dokumente/bewilligungstraeger/pdf/beh.pdf?la=de>
 
 ^
 
-*瑞士驻中国使领馆的材料要求*？
+除满足上述移民局（和学校）的要求外，**请注意还要满足**[瑞士驻中国使领馆的材料要求](https://www.eda.admin.ch/countries/china/en/home/visa/entry-ch/more-90-days/documents-national.html)！具体请下载下方PDF查看：
 
-*使领馆要求和移民局不完全相同，需要取并集，把所有材料都交上去*！
+**使领馆和移民局要求不完全相同**，**需要取两者的并集，把所有材料都交上去**！
+
+![](.topwrite/assets/image_1682753598509.png =335)
+
+> **使领馆递签材料要求**<https://www.eda.admin.ch/countries/china/en/home/visa/entry-ch/more-90-days/documents-national.html>
 
 ^
 
 #### **3. 几点特别注意的**！
 
 * 注意不要用旅游签证进入瑞士
-* 如下申请材料仅针对Canton Zurich的学校
+* 上述学校官网要求的申请材料仅针对苏黎世州的高等院校
 * 存款必须存在自己的名下，不可以存在父母名下
 
 ^
 
 #### **4. 如有问题**？
 
-给学校的international student office发邮件（回复很快）
+给学校的International Student Office发邮件，邮件回复很快
+
+> ETH国际学生办公室<https://ethz.ch/students/en/studies/international-students.html>
+>
+> UZH国际学生支持 <https://www.internationals.uzh.ch/en.html>
 
 ^
 
 #### **5. 在哪里递交签证材料**
 
-<https://www.eda.admin.ch/countries/china/en/home/representations/embassy-in-beijing.html>
+瑞士在中国一共有一个大使馆和四个领事馆，分别在北京，广州、香港、上海和成都，以下链接含有使领馆管辖的城市、邮箱、电话和和签证相关问题的电话热线时间。
 
-瑞士在中国一共有一个大使馆和四个领事馆，分别在北京，广州、香港、上海和成都，以上链接含有使领馆管辖的城市、邮箱、电话和和签证相关问题的电话热线时间。
+> <https://www.eda.admin.ch/countries/china/en/home/representations/embassy-in-beijing.html>
 
 ^
 
 #### **6. 如何预约递交签证材料**
 
-可以在准备材料的同时就查看以下网站。另对邮寄申请材料有详细说明。[ttps://visa.vfsglobal.com/chn/zh/che/](https://visa.vfsglobal.com/chn/zh/che/)
+可以在准备材料的同时就查看以下网站&#x20;
+
+> <https://visa.vfsglobal.com/chn/zh/che/>
+
+^
