Update 11国内手机号.md, 13赴瑞机票.md, 14“云”找房.md, 15新生材料c-o寄存.md, 26瑞士银行卡.md

--- a/11国内手机号.md
+++ b/11国内手机号.md
@@ -44,20 +44,27 @@
 
 #### **3. 其它全球上网服务（小米等**）
 
-小米手机提供的全球上网服务 <https://www.mi.com/service/consult/Mi%20roaming>。
+小米手机提供的全球上网服务 <https://www.mi.com/service/consult/Mi%20roaming>
 
-华为手机天际通全球流量，可选择绑定手机SIM卡或天际通套餐和卡券等<https://consumer.huawei.com/cn/mobileservices/>。
+华为手机天际通全球流量，可选择绑定手机SIM卡或天际通套餐和卡券等<https://consumer.huawei.com/cn/mobileservices/>
 
+****
 
 #### **4. 瑞士临时旅游流量卡（淘宝等**）
 
 淘宝上面也有很多瑞士或欧洲旅游上网卡（实体流量卡），流量不等，大家按需购买即可。
 
+****
+
 #### **5. 苹果手机换区**
 
 使用苹果手机的同学，到达瑞士之后可能需要切换苹果手机及Apple Store所在区域。 如大家在瑞士日常交通使用的APP，SBB，ZVV在中国区域的Apple Store是无法搜索到并下载的。
-Apple Setting：Setting -> Language& Region -> RegionApple Store：Apple Store -> Profile Picture(Up Right) -> Profile ID (Apple ID) -> Country/ Region苹果手机型号不同，以上设置可能略微有差别。
+Apple Setting：Setting -> Language& Region -> RegionApple Store：Apple Store -> Profile Picture(Up Right) -> Profile ID (Apple ID) -> Country/ Region&#x20;
+
+苹果手机型号不同，以上设置可能略微有差别。
+
+^
 
 #### **6. 安卓手机谷歌框架**
 
-在国外，国内的手机极容易出现水土不服，因此需要安装适合手机当前安卓系统版本的最新谷歌套件来解决。常说的谷歌三件套（google service framework，google play service，google play store），大家最好在国内已有效安装好。
+请提前开启安卓手机内的**谷歌基础服务**，以便于通过谷歌Play Store安装瑞士生活常用的APP（如SBB Mobile、ZVV等）。常说的谷歌三件套（google service framework，google play service，google play store），大家最好在国内已安装好。
