--- a/13赴瑞机票.md
+++ b/13赴瑞机票.md
@@ -8,10 +8,10 @@
 #### **1.2 机票日期/时间选择**：
 
 * 航班落地（入境）时间必须在签证生效日期以后（因此不建议在获得签证前便购买机票），以避免航司拒载或是滞留国外。一般情况下，签证生效时间相比于开学都不会提前太多。
-* 如果到达苏黎世后不再需要担心住房问题，或者你在购买机票前已经成功找到了住房（根据我们的经验，这对于需要自行寻找住所的同学基本不可能...），那么在开学前5-7天抵达苏黎世便足够。如果你还没有找到住房，建议提前2-3周抵达苏黎世以安排找房事宜（苏黎世找房难度很高，因此建议预留充足时间，详见[“‘云’找房”](<14“云”找房.md>)和[“找房租房”](<24找房租房.md>)部分）。当然，如果签证生效时间晚于此的话，自然是以签证生效时间为准，避免无法登机或造成滞留。
+* 如果到达苏黎世后不再需要担心住房问题，或者你在购买机票前已经成功找到了住房（根据我们的经验，这对于需要自行寻找住所的同学基本不可能...），那么在开学前5-7天抵达苏黎世便足够。如果你还没有找到住房，建议提前2-3周抵达苏黎世以安排找房事宜（苏黎世找房难度很高，因此建议预留充足时间，详见[“‘云’找房”](14“云”找房.md)和[“找房租房”](24找房租房.md)部分）。当然，如果签证生效时间晚于此的话，自然是以签证生效时间为准，避免无法登机或造成滞留。
 * 航班到达时间不宜过晚，以上午/下午为宜，以便为接下来的日程（手续办理、物品采购、与房东交接等）留足时间，并避免因公共交通班次减少等原因导致难以前往市区。
-从苏黎世机场前往市区一般乘坐火车，仅需10min即可抵达市区的主火车站（Zürich HB），再通过有轨电车等方式前往最终目的地；
-为此，可提前下载Google Map和SBB Mobile/ZVV应用（本应用及许多在瑞常用的应用运行需要谷歌框架，使用安卓手机，尤其是华为系列手机的同学请特别注意，详见[“国内手机和手机号”](<11国内手机号.md>)部分），并由此查询路线&购票（详见[“交通票”](21交通票.md)及[“落地事项”](02落地事项.md)部分）；苏黎世的出租车价格高昂，非必要不建议乘坐。
+  从苏黎世机场前往市区一般乘坐火车，仅需10min即可抵达市区的主火车站（Zürich HB），再通过有轨电车等方式前往最终目的地；
+  为此，可提前下载Google Map和SBB Mobile/ZVV应用（本应用及许多在瑞常用的应用运行需要谷歌框架，使用安卓手机，尤其是华为系列手机的同学请特别注意，详见[“国内手机和手机号”](11国内手机号.md)部分），并由此查询路线&购票（详见[“交通票”](21交通票.md)及[“落地事项”](02落地事项.md)部分）；苏黎世的出租车价格高昂，非必要不建议乘坐。
 
 #### **1.3 中转路线选择注意事项**
 
@@ -56,7 +56,7 @@
 
 #### **1.11 选座tips（适用于搭乘经济舱的同学**）
 
-* 希望较少被打扰的，或是希望飞行途中欣赏风景的，建议选择靠窗座位（后者需额外注意飞机舷窗排列以避免坐到“面壁座”，飞机客舱布局和/或舷窗排列可参考航司官网、飞常准及[Aerolopa](<https://www.aerolopa.com/>)）
+* 希望较少被打扰的，或是希望飞行途中欣赏风景的，建议选择靠窗座位（后者需额外注意飞机舷窗排列以避免坐到“面壁座”，飞机客舱布局和/或舷窗排列可参考航司官网、飞常准及[Aerolopa](https://www.aerolopa.com/)）
 * 希望进出方便的，或是希望拥有稍大腿部空间的，建议选择过道座位
 * 希望拥有较大腿部空间的，建议选择经济舱首排/紧急出口排（一般需额外在航司官网选购；选择紧急出口座位的在紧急情况下需履行相应义务）
 * 因为晕机等因素，希望较少受到气流和颠簸影响的，建议选择飞机中段部位（视野可能受到遮挡）
@@ -83,7 +83,9 @@
 ^
 
 ***
+
 ^
+
 ### **2. 赴瑞可能路线及其特点**
 
 （本章节综合当前航班执行情况、现有航班计划、当前放票情况、航司合作情况、行李直挂情况、行程总时长、航司“靠谱”程度等编写；所有票价信息均为4月23日通过官网、OTA平台等查询8月中下旬机票，结合本人经验获得，仅供参考）
@@ -115,9 +117,9 @@
 * 航班数量相对多
 * 持有7日内前往瑞士（或其他国家）的机票的，可入境香港特区停留不多于7天而无需办理港澳通行证，具体请参考[特区政府有关规定](https://www.immd.gov.hk/hks/services/visas/overseas-chinese-entry-arrangement.html)。
 * 香港赤鱲角机场近日联合包含国泰航空CX在内的香港各主要航司举行抽奖活动，目前是第二轮，中奖者可获得免费机票，详见：
--- 香港赤鱲角机场[《飞遇世界大赏》](<https://wow.hongkongairport.com/lang/sc/tickets/>)
--- 国泰航空[《「飞遇世界大赏」机票礼遇 - 中国香港始发机票大抽奖》](<https://flights.cathaypacific.com/sc_CN/offers/world-of-winners-outbound-hk.html>)
-后续活动信息请关注香港赤鱲角机场及国泰航空。
+  \-- 香港赤鱲角机场[《飞遇世界大赏》](https://wow.hongkongairport.com/lang/sc/tickets/)
+  \-- 国泰航空[《「飞遇世界大赏」机票礼遇 - 中国香港始发机票大抽奖》](https://flights.cathaypacific.com/sc_CN/offers/world-of-winners-outbound-hk.html)
+  后续活动信息请关注香港赤鱲角机场及国泰航空。
 
 缺点：
 
@@ -247,7 +249,7 @@
 ### **3. 参考**
 
 * 国际航线航班信息：[知乎《国际航班汇总》专栏](https://www.zhihu.com/column/c_1286552806351065088)（由本人，即[知乎@ZBAA-APP](https://www.zhihu.com/people/zbaa-app/)汇总整理，欢迎关注）
-* 航班不正常保障及旅客权益：[欧盟对EC261的介绍（英文版）](<https://europa.eu/youreurope/citizens/travel/passenger-rights/air/index_en.htm>)、[航空博主SiriusDEUU对EC261的介绍](https://mp.weixin.qq.com/s/17NE6r18HiANbfHoRcEjPA)
+* 航班不正常保障及旅客权益：[欧盟对EC261的介绍（英文版）](https://europa.eu/youreurope/citizens/travel/passenger-rights/air/index_en.htm)、[航空博主SiriusDEUU对EC261的介绍](https://mp.weixin.qq.com/s/17NE6r18HiANbfHoRcEjPA)
 * 内地往来香港航班信息：[知乎《港澳台地区航班及相关信息》专栏](https://www.zhihu.com/column/c_1593393411708715010)
 
 及文中其他外链。
