Update .topwrite/assets/f955dec07b4bd04739878aac30dd4b7.png, 14“云”找房.md, 22prepaid电话卡.md, 24找房租房.md, 25居委会报到.md, 28移民局录指纹.md, 30学联服务.md, 32医疗相关.md, ETH注册.md

--- a/14“云”找房.md
+++ b/14“云”找房.md
@@ -1,16 +1,22 @@
 以下网站可以在线云找房：
 
-* **Student Village**: <http://studentvillage.ch/> 有基本家具，拎包入住（仅限ETH学生）*一般不太可能通过官网找到房，而是通过facebook群和微信群组，具体请晨宇按我之前群里发的补充下*
+* **Student Village**: <http://studentvillage.ch/> 有基本家具，拎包入住（仅限ETH学生）
+
+> 一般不太可能通过SV官网找到房，而是通过Facebook群组和微信群。
+>
+> Facebook群组链接<https://www.facebook.com/groups/934381236673846>
+>
+> 微信群名为”SV的宝宝们“，长期500人满员，可以联系在群中的朋友在有空位时将你拉入。
+
 * **Living Sceinece**: <https://www.livingscience.ch/wohnen-studieren-zuerich/?L=0> 有基本家具，拎包入住（仅限ETH学生）
 * **学生WOKO**：<http://www.woko.ch/> 有基本家具，拎包入住。年龄限制，28或以下。若博士在28岁前入住，之后可以继续续住。博士年收入超过26,400CHF，每月要多交100CHF
 * **学生JUWO**: <http://www.juwo.ch/> 没有家具。年龄限制（16-28）；年收入不能超过30,000瑞郎
 * **学联论坛**上租房信息：[https://forum.acssz.org/](https://forum.acssz.org/t/house)
 
-此外，你可以选择通过**学联合作伙伴Intermezzo租房公司**云找房：
+此外，你还可以通过**学联合作伙伴Intermezzo租房公司**云找房：
 
-![](.topwrite/assets/IMG_3979.JPG =304)
+![](.topwrite/assets/f955dec07b4bd04739878aac30dd4b7.png =369)
 
-^
 ^
 
 除此外，以下网站可尝试云找房，但多数情况下是需要现场看房的：
@@ -35,7 +41,9 @@
 
 ^
 
-**交易提醒**： 经典骗钱套路是说你还没来瑞士，之后如果您反悔不租的话他不划算，请你转定金过去让他看到谁是最真诚的租户。事实上瑞士的正规租房程序没有定金的说法，并不需要提前交定金，要求提前交钱的都不要信！类似这种可疑情况都不要转账！！
+**租房交易提醒**：&#x20;
+
+经典骗钱套路是说你还没来瑞士，之后如果您反悔不租的话他不划算，请你转定金过去让他看到谁是最真诚的租户。事实上瑞士的正规租房程序没有定金的说法，并不需要提前交定金，要求提前交钱的都不要信！类似这种可疑情况都不要转账！！
 
 * 瑞士正规租房流程是押金账户（会有一个专门开设在您名下的银行押金账户来存放您交的押金，而不是放在房东或房产公司的账户里）+租金对公转账（通过Einzahlungsschein（汇款单）或LSV（定期扣款授权协议）直接将租金转给房东（房产公司或私人产权所有者）账户。如果因转租确要汇款到二房东私人账户，必须在转租合同内写明。
 * debit储蓄卡可以正式汇款/转账（Zahlung），但Prepaid卡不行。请避免将大量金额一次性充入Prepaid卡，否则之后将无法进行正式转账（如使用Einzahlungsschein交房租，交学费等）且无法转回Debit卡，而只能自己购物消费或使用Twint进行非正式场合的转账交易；
