--- a/30学联服务.md
+++ b/30学联服务.md
@@ -1,26 +1,34 @@
-**学联网站**<https://www.acssz.org/>
+#### **学联网站**
+
+<https://www.acssz.org/>
 
 ^
 
-**2023新生答疑会（新**） <https://8lrx8emp45.k.topthink.com/@dayihui2023/00huanyingye.html>
+#### **2023年苏黎世新生文档（新**）&#x20;
 
-2022新生手册（旧）<https://www.acssz.org/service/booklet/>
+<https://8lrx8emp45.k.topthink.com/@dayihui2023/00huanyingye.html>
 
 ^
 
-**学联公众号**
+2022新生手册（旧）
+
+<https://www.acssz.org/service/booklet/>
+
+^
+
+#### **学联公众号**
 
 ![](.topwrite/assets/image_1682199759896.png =160)
 
 ^
 
-**学联小红书**
+#### **学联小红书**
 
 ![](.topwrite/assets/image_1682199946890.png =159)
 
 ^
 
-**学联专属Sunrise LEBARA折扣**：
+#### **学联专属Sunrise LEBARA折扣**
 
 <https://forum.acssz.org/d/796-yi-wen-du-dong-rui-shi-dian-hua-qia-xue-lian-sunrise-yolfu-li>
 
@@ -28,7 +36,7 @@
 
 ^
 
-**学联专属Swisscare折扣**：
+#### **学联专属Swisscare折扣**
 
 <https://forum.acssz.org/d/51-swisscarebao-xian-guideline-da-yi-he-xue-lian-zhe-kou>
 
@@ -36,7 +44,7 @@
 
 ^
 
-**学联伙伴intermezzo租房**：
+#### **学联伙伴intermezzo租房**
 
 <https://forum.acssz.org/d/386>
 
