--- a/28移民局录指纹.md
+++ b/28移民局录指纹.md
@@ -1,4 +1,4 @@
-*与*[“居委会报到”部分](25居委会报到.md)*相同，本章节所称“居委会”，在苏黎世市区叫做“Kreisbüro”（3、4、5、6、9、10、11、12区）或者“Personenmeldeamt”（1、2、7、8区），在苏黎世郊区叫做“Einwohnerkontrolle”，为便于表述，下文在不需要区分的情况下将“Kreisbüro”“Personenmeldeamt”统称为“Kreisbüro”，将“Kreisbüro”“Personenmeldeamt”“Einwohnerkontrolle”统称为“居委会*”。
+与[“居委会报到”部分](25居委会报到.md)相同，本章节所称“居委会”，在苏黎世市区叫做“Kreisbüro”（3、4、5、6、9、10、11、12区）或者“Personenmeldeamt”（1、2、7、8区），在苏黎世郊区叫做“Einwohnerkontrolle”，为便于表述，下文在不需要区分的情况下将“Kreisbüro”“Personenmeldeamt”统称为“Kreisbüro”，将“Kreisbüro”“Personenmeldeamt”“Einwohnerkontrolle”统称为“居委会”。
 
 ^
 
@@ -45,6 +45,8 @@
 
 ^
 
-参考网址：
-<https://www.zh.ch/de/migration-integration/einreise/einreise-ohne-erwerbstaetigkeit-fuer-drittstaatsangehoerige.html>
-<https://ethz.ch/content/dam/ethz/main/continuing-education/Merkblaetter/Factsheet_Visum_en.pdf>
+> 参考网址：
+> <https://www.zh.ch/de/migration-integration/einreise/einreise-ohne-erwerbstaetigkeit-fuer-drittstaatsangehoerige.html>
+> <https://ethz.ch/content/dam/ethz/main/continuing-education/Merkblaetter/Factsheet_Visum_en.pdf>
+
+^
