--- a/14“云”找房.md
+++ b/14“云”找房.md
@@ -1,4 +1,8 @@
-以下网站可以在线云找房：
+在找房之前，请查看租房避雷贴：<https://forum.acssz.org/d/794-zu-fang-bi-lei-tie>
+
+^
+
+**以下网站可以在线云找房**：
 
 * **Student Village**: <http://studentvillage.ch/> 有基本家具，拎包入住（仅限ETH学生）
 
