--- a/24找房租房.md
+++ b/24找房租房.md
@@ -18,6 +18,8 @@
 
 #### **3**. **找房途径和渠道**
 
+在找房之前，请查看租房避雷贴：<https://forum.acssz.org/d/794-zu-fang-bi-lei-tie>
+
 **常见渠道**
 
 | 途径/渠道                                   | 简介                                                             | 优点                                                                     | 缺点                                                   | 链接                                                                                                                                                                                                                                               |
@@ -57,7 +59,7 @@ Alex将在微信账户的**朋友圈**中发布所有可用的房间。每个房
 
 [https://forum.acssz.org/](https://forum.acssz.org/t/house)
 
-****
+***
 
 **其他渠道**
 
