--- a/32医疗相关.md
+++ b/32医疗相关.md
@@ -34,7 +34,7 @@ University Children’s Hospital--<https://www.kispi.uzh.ch>
 
 University Eye Clinic--<http://www.augenklinik.usz.ch>
 
-####
+^
 
 #### **1.2 普通诊所**
 
@@ -108,60 +108,51 @@ UZH在Central的诊所可以预约打疫苗，如TBE（蜱虫疫苗），FLU，H
 
 > 注：具体疫苗报销情况，需要根据自己所购买的保险决定。
 
+^
+
 ### **5. 保险报销**
 
-（资料来源：各个保险公司官网，以及ETH官网整理的相关信息<https://ethz.ch/en/studies/international/after-arrival/health-insurance/nicht-eu.html> ）
+**1. Swisscare** （**以下价格为**[学联专属折扣](https://forum.acssz.org/d/51-swisscarebao-xian-guideline-da-yi-he-xue-lian-zhe-kou)**后价格，低于ETH及Swisscare官网上的价格**）
 
-1\. Swisscare ***待补充详细信息***
+Swisscare于2005年在瑞士的弗里堡成立。该公司的目标是为生活在瑞士的外国学生提供一个在线健康保险解决方案。这一概念继续存在并不断得到改进。Swisscare瑞士有限公司是一家拥有瑞士执照的保险经纪公司。
 
-***
+| **32岁以下**  | **年度免赔额（CHF**） | **价格（CHF/月**） |
+| ---------- | -------------- | ------------- |
+|            | 1500           | 58            |
+|            | 1000           | 62.7          |
+|            | 500            | 80.8          |
+|            | 300            | 104.5         |
+| **32岁及以上** | **年度免赔额**      | **价格（CHF/月**） |
+|            | 1500           | 77            |
+|            | 1000           | 83.6          |
+|            | 500            | 99.8          |
+|            | 300            | 124.5         |
 
-2\. Groupe Mutuel
+^
+
+**2. Groupe Mutuel**
 
 Groupe Mutuel是一家瑞士健康保险公司，提供广泛的健康保险计划，包括基本健康保险、牙科保险、旅行保险等。
 
-（1）地址：Widdergasse 1, 8001 Zürich
-
-（2）保险种类及价格
-
-以下都是Academic Care
-
-| 25岁以下     | Annual deductible     | 价格（CHF/月）     |
-| --------- | --------------------- | ------------- |
-|           | 500                   | 100           |
-|           | 100                   | 115           |
-|           | 0                     | 120           |
-| **25岁以上** | **Annual deductible** | **价格（CHF/月**） |
-|           | 500                   | 185           |
-|           | 100                   | 205           |
-|           | 0                     | 210           |
-
-\* Annual deductible：年度免赔额，请参照[保险及豁免](27保险及豁免.md)第5小节内容。
+| 25岁以下     | 年度免赔额     | 价格（CHF/月）     |
+| --------- | --------- | ------------- |
+|           | 500       | 100           |
+|           | 100       | 115           |
+|           | 0         | 120           |
+| **25岁以上** | **年度免赔额** | **价格（CHF/月**） |
+|           | 500       | 185           |
+|           | 100       | 205           |
+|           | 0         | 210           |
 
 ^
 
-3\. 保险豁免 ***和前文内容重复，将整理进之前章节***
-
-瑞士政府规定所有在瑞士居住的人都必须购买基本健康保险，包括留学生在内。留学生需在到达苏黎世的三个月内购买保险，如果不买保险会被强制上险，即收到巨额保单。因为上述保险不符合Federal Health Insurance Act (KVG)，只符合"Federal Insurance Contract Act" (VVG) law。因此，在购买上述保险后，你必须申请保险豁免。
-
-（1）全部流程：申请到临时permit后，尽快到保险公司购买保险-->给政府部门邮寄相关证明，该证明可让保险公司工作人员协助完成-->收到来自政府的豁免信文件，豁免成功
-
-（2）豁免流程 （参考：<https://zhuanlan.zhihu.com/p/579456081?utm_source=wechat_session&utm_medium=social&s_r=0&utm_id=0>）
-
-政府网站填写豁免申请地址：
-
-<https://www.zh.ch/en/gesundheit/krankenversicherung/kvg-befreiungsgesuch.html>
-
-可参考UZH国际处制作的豁免申请填写表：
-
-<https://www.int.uzh.ch/dam/jcr:875a718d-973e-46ee-b5a7-c02c0b3df048/Instructions_Exemption.pdf>
-
-居留卡类型可参考：
-
-<https://www.swissinfo.ch/chi/外国人在瑞士的身份及居留证件/718996>
-
-完成豁免申请。正常情况下，若提交完整材料后，数小时即可获批；若长期为收到批准，请直接联系相关部门。
+> 附录：瑞士留学生基础医疗保险投保指南——SWISSCARE
+>
+> <https://mp.weixin.qq.com/s/bNqfac6lQLKp9KLMG8az0Q>
+>
+> 年度免赔额：请参照[保险及豁免](27保险及豁免.md)第5小节内容。
+>
+> ETH官网相关信息<https://ethz.ch/en/studies/international/after-arrival/health-insurance/nicht-eu.html>&#x20;
 
 ^
-
-大致流程如上，可能会因为保险公司不同而有出入。若有豁免相关问题，可直接联系保险公司以及政府相关部门，请他们协助解决。
+^
