--- a/32医疗相关.md
+++ b/32医疗相关.md
@@ -112,6 +112,10 @@ UZH在Central的诊所可以预约打疫苗，如TBE（蜱虫疫苗），FLU，H
 
 ### **5. 保险报销**
 
+可选择自己先支付后将账单发给保险公司报销，或者由医疗机构直接将账单发送给保险公司（不是所有医疗机构都可以直接发送）。
+
+^
+
 **1. Swisscare** （**以下价格为**[学联专属折扣](https://forum.acssz.org/d/51-swisscarebao-xian-guideline-da-yi-he-xue-lian-zhe-kou)**后价格，低于ETH及Swisscare官网上的价格**）
 
 Swisscare于2005年在瑞士的弗里堡成立。该公司的目标是为生活在瑞士的外国学生提供一个在线健康保险解决方案。这一概念继续存在并不断得到改进。Swisscare瑞士有限公司是一家拥有瑞士执照的保险经纪公司。
