--- a/99鸣谢.md
+++ b/99鸣谢.md
@@ -1,16 +1,25 @@
-| **负责人** |                       **负责内容**                       |
-| :-----: | :--------------------------------------------------: |
-|    超瑜   |                行前 - 申请签证&#xA;生活 - 心理咨询               |
-|    锦涛   | 行前 - 新生包寄存&#xA;落地 - 电话卡&#xA;落地 - 保险及豁免&#xA;生活 - 学联服务 |
-|    李圆   |             行前 - 国内手机和手机号&#xA;行前 - 国内银行卡             |
-|    逸飞   |               行前 - 赴瑞机票&#xA;落地 - ETH注册               |
-|    雨航   |       行前 - 行李准备&#xA;落地 - UZH注册&#xA;落地 - 移民局录指纹       |
-|    逍遥   |                      行前 - “云”找房                      |
-|    思婕   |         落地 - 机场行李&#xA;落地 - 找房租房&#xA;生活 - 医疗相关        |
-|    晨宇   |                       落地 - 交通票                       |
-|    王尊   |                      落地 - ETH注册                      |
-|    竹仝   |                   落地 - Kreisbüro报到                   |
-|    俞玥   |                      落地 - 瑞士银行卡                      |
-|    凌晞   |                      生活 - 苏黎世消费                      |
+|  **负责人** |      **负责内容**     |
+| :------: | :---------------: |
+|   超瑜 锦涛  |     行前 - 申请签证     |
+|    雨航    |     行前 - 行李准备     |
+|    李圆    |   行前 - 国内手机和手机号   |
+|    李圆    |     行前 - 国内银行卡    |
+|    逸飞    |     行前 - 赴瑞机票     |
+|    锦涛    |    行前 - 材料c/o寄存   |
+| 晨宇 逍遥 锦涛 |     行前 - ”云“找房    |
+|    思婕    |    落地 - 行李丢失处理    |
+|    晨宇    |      落地 - 交通票     |
+|    锦涛    |     落地 - 瑞士电话卡    |
+|   王尊 逸飞  | 落地 - 学校注册 - ETH注册 |
+|    雨航    | 落地 - 学校注册 - UZH注册 |
+|   思婕 锦涛  |     落地 - 找房租房     |
+| 竹仝 雨航 逸飞 |     落地 - 居委会报到    |
+|    俞玥    |     落地 - 瑞士银行卡    |
+|    锦涛    |     落地 - 保险及豁免    |
+| 雨航 张堃 逸飞 |    落地 - 移民局录指纹    |
+|    锦涛    |     生活 - 学联服务     |
+|    凌晞    |     生活 - 苏黎世消费    |
+|    思婕    |     生活 - 医疗相关     |
+|    超瑜    |     生活 - 心理咨询     |
 
-*待修改，按章节分别credit*
+**
