--- a/24找房租房.md
+++ b/24找房租房.md
@@ -51,7 +51,7 @@ Alex将在微信账户的**朋友圈**中发布所有可用的房间。每个房
 6. 租金价格包括所有的水电费、Wifi和家具费用；
 7. 如果你提交了申请表，并且已经告诉你，Alex把申请表转给了他的同事来准备合同，那么这个申请就有约束力。如果你后来取消申请，我们将不接受你的进一步申请，或者向你收取50瑞士法郎的行政工作费用。
 
-:-: ![](.topwrite/assets/IMG_3979.JPG =304)
+:-: ![](.topwrite/assets/f955dec07b4bd04739878aac30dd4b7.png =369)
 
 ^
 
