--- a/99鸣谢.md
+++ b/99鸣谢.md
@@ -12,11 +12,11 @@
 |    锦涛    |     落地 - 瑞士电话卡    |
 |   王尊 逸飞  | 落地 - 学校注册 - ETH注册 |
 |    雨航    | 落地 - 学校注册 - UZH注册 |
-|   思婕 锦涛  |     落地 - 找房租房     |
+|    思婕    |     落地 - 找房租房     |
 | 竹仝 雨航 逸飞 |     落地 - 居委会报到    |
 |    俞玥    |     落地 - 瑞士银行卡    |
 |    锦涛    |     落地 - 保险及豁免    |
-| 雨航 张堃 逸飞 |    落地 - 移民局录指纹    |
+| 张堃 雨航 逸飞 |    落地 - 移民局录指纹    |
 |    锦涛    |     生活 - 学联服务     |
 |    凌晞    |     生活 - 苏黎世消费    |
 |    思婕    |     生活 - 医疗相关     |
