--- a/30学联服务.md
+++ b/30学联服务.md
@@ -1,6 +1,9 @@
 #### **学联网站**
 
 <https://www.acssz.org/>
+^
+#### **2023苏黎世新生二群**
+![](.topwrite/assets/33c3aa92f67fdb0a3553253ac71eceb.png)
 
 ^
 
