--- a/11国内手机号.md
+++ b/11国内手机号.md
@@ -42,19 +42,19 @@
 
 ^
 
-#### **3. 其它全球上网服务（小米等**）
+#### **3. 其它全球上网服务**
 
 小米手机提供的全球上网服务 <https://www.mi.com/service/consult/Mi%20roaming>
 
 华为手机天际通全球流量，可选择绑定手机SIM卡或天际通套餐和卡券等<https://consumer.huawei.com/cn/mobileservices/>
 
-****
+^
 
 #### **4. 瑞士临时旅游流量卡（淘宝等**）
 
 淘宝上面也有很多瑞士或欧洲旅游上网卡（实体流量卡），流量不等，大家按需购买即可。
 
-****
+^
 
 #### **5. 苹果手机换区**
 
