--- a/15新生材料c-o寄存.md
+++ b/15新生材料c-o寄存.md
@@ -1,3 +1,7 @@
+> 本节内容仅适用于ETH的相关流程，UZH不会提前发新生材料
+
+^
+
 由于学校Kanzlei的窗口开放时间很短（每周只两天），新生材料包（学生卡、注册证明）可以提前找熟悉且靠谱的在苏黎世的学姐学长邮寄保存以便于落地后可以立刻领取，在学校的个人信息地址栏填写学姐学长的c/o地址即可。但请注意以下：
 
 ^
@@ -9,6 +13,10 @@
 ^
 
 因此，如果要提前寄存材料，一定要找靠谱学姐学长，**保证你们的联络足够紧密，经常联系更新进展**。
+
+^
+^
+*。
 
 ^
 ^
