--- a/05提问.md
+++ b/05提问.md
@@ -1,17 +1,14 @@
-**自由提问环节**
-
-请**开麦**或**发送zoom消息**提问
+**如仍有问题，请在新生群内提问**：
 
 ^
-
-> 尽管我们尽最大努力在有限时间内整理并提供丰富全面的干货信息，但仍可能会出现遗漏、错误与疏忽。
->
-> **欢迎大家对文档进行抓虫纠错，请发邮件致** <info@acssz.org> **反馈意见，谢谢**！
-
-^
-
-> **欢迎加入2023苏黎世新生群**
 
 ![](.topwrite/assets/6401.png =239)
+
+^
+^
+
+尽管我们尽最大努力在有限时间内整理并提供丰富全面的干货信息，但仍可能会出现遗漏、错误与疏忽。
+
+**欢迎大家对文档进行抓虫纠错，请发邮件致** <info@acssz.org> **反馈意见，谢谢**！
 
 ^
