--- a/00欢迎页.md
+++ b/00欢迎页.md
@@ -9,3 +9,12 @@
 :-: Association of Chinese Students and Scholars in Zurich
 
 :-: Assoziation der Chinesischen Studierenden und Gelehrten in Zürich
+
+^
+^
+
+> [warning] :-: **本文档版权归内容创作者所有**
+>
+> :-: **未经授权，禁止转载**
+
+^
