--- a/27保险及豁免.md
+++ b/27保险及豁免.md
@@ -51,15 +51,7 @@
 
 ^
 
-#### **2. 它国保险**
-
-**我的私人健康保险是否被瑞士当局承认**？
-
-如果您的健康保险1）符合法律要求，2）具有与瑞士基本保险（KVG）相同的保障范围，3）您的保险公司愿意在 "表格A "上签字盖章，您就可以在瑞士免于参加强制性健康保险。请遵循我们网站上的说明。
-
-^
-
-#### **3**. **国际学生的保险选择**
+#### **2**. **国际学生的保险选择**
 
 **是否有提供足够保险的廉价学生套餐**？
 
@@ -87,7 +79,7 @@
 
 ^
 
-#### **4**. **豁免强制保险义务**
+#### **3**. **豁免强制保险义务**
 
 > <https://ethz.ch/de/studium/international/nach-ankunft/krankenversicherung/befreiung.html>
 
@@ -125,7 +117,7 @@ With a new Swiss Student Health Insurance without income
 
 ^
 
-#### **5. 免赔额与共付额**
+#### **4**. **免赔额与共付额**
 
 > <https://swisscare.com/zh/product/ruishiguojixueshengjiankangbaoxian>
 
@@ -150,7 +142,7 @@ With a new Swiss Student Health Insurance without income
 
 ^
 
-#### **6. 学联专属Swisscare折扣及福利**！
+#### **5**. **学联专属Swisscare折扣及福利**！
 
 > <https://forum.acssz.org/d/51-swisscarebao-xian-guideline-da-yi-he-xue-lian-zhe-kou>
 
