--- a/27保险及豁免.md
+++ b/27保险及豁免.md
@@ -146,7 +146,7 @@ With a new Swiss Student Health Insurance without income
 
 > <https://forum.acssz.org/d/51-swisscarebao-xian-guideline-da-yi-he-xue-lian-zhe-kou>
 
-Swisscare作为苏黎世学联的长期合作伙伴，在ETH和Siwsscare官网价格基础上（最低61瑞郎/月起），为苏黎世学联的所有同学提供**额外的5%学联专属折扣**。如此，就在原本就很优惠的基础上，再便宜了5%，保费最低**58瑞/月**起。
+Swisscare作为苏黎世学联的长期合作伙伴，在ETH和Swisscare官网价格基础上（最低61瑞郎/月起），为苏黎世学联的所有同学提供**额外的5%学联专属折扣**。如此，就在原本就很优惠的基础上，再便宜了5%，保费最低**58瑞/月**起。
 
 ^
 
