--- a/00欢迎页.md
+++ b/00欢迎页.md
@@ -16,4 +16,6 @@
 >
 > :-: **未经授权，禁止转载**
 
+> [success] :-: 2023年4月19日新生互动答疑会回放[请点击此](https://www.bilibili.com/video/BV18m4y1176R/?share_source=copy_web\&vd_source=802461966f51c0cf1ab48c9114efb719)
+
 ^
