--- a/30学联服务.md
+++ b/30学联服务.md
@@ -1,9 +1,12 @@
 #### **学联网站**
 
 <https://www.acssz.org/>
+
 ^
+
 #### **2023苏黎世新生二群**
-![](.topwrite/assets/33c3aa92f67fdb0a3553253ac71eceb.png)
+
+![](.topwrite/assets/33c3aa92f67fdb0a3553253ac71eceb.png =253)
 
 ^
 
@@ -33,17 +36,19 @@
 
 #### **学联专属Sunrise LEBARA折扣**
 
-<https://forum.acssz.org/d/796-yi-wen-du-dong-rui-shi-dian-hua-qia-xue-lian-sunrise-yolfu-li>
+![](.topwrite/assets/image_1682192038118.png =245)![](.topwrite/assets/image_1682199817339.png =204)![](.topwrite/assets/image_1682199826817.png =188)
 
-![](.topwrite/assets/image_1682199817339.png =204)![](.topwrite/assets/image_1682199826817.png =188)
+<https://forum.acssz.org/d/796-yi-wen-du-dong-rui-shi-dian-hua-qia-xue-lian-sunrise-yolfu-li>
 
 ^
 
 #### **学联专属Swisscare折扣**
 
-<https://forum.acssz.org/d/51-swisscarebao-xian-guideline-da-yi-he-xue-lian-zhe-kou>
+![](.topwrite/assets/image_1682925725457.png =210)![](.topwrite/assets/image_1682200044731.png =271)
 
-![](.topwrite/assets/image_1682200044731.png =271)
+<https://forms.swisscare.com/#/spss?group=3018>
+
+<https://forum.acssz.org/d/51-swisscarebao-xian-guideline-da-yi-he-xue-lian-zhe-kou>
 
 ^
 
