--- a/30学联服务.md
+++ b/30学联服务.md
@@ -1,16 +1,16 @@
-#### **学联网站**
+#### **1. 学联网站**
 
 <https://www.acssz.org/>
 
 ^
 
-#### **2023苏黎世新生二群**
+#### **2. 2023苏黎世新生二群**
 
 ![](.topwrite/assets/33c3aa92f67fdb0a3553253ac71eceb.png =253)
 
 ^
 
-#### **2023年苏黎世新生文档（新**）&#x20;
+#### **3. 2023年苏黎世新生文档（新**）&#x20;
 
 <https://8lrx8emp45.k.topthink.com/@dayihui2023/00huanyingye.html>
 
@@ -22,19 +22,19 @@
 
 ^
 
-#### **学联公众号**
+#### **4. 学联公众号**
 
 ![](.topwrite/assets/image_1682199759896.png =160)
 
 ^
 
-#### **学联小红书**
+#### **5. 学联小红书**
 
 ![](.topwrite/assets/image_1682199946890.png =159)
 
 ^
 
-#### **学联专属Sunrise LEBARA折扣**
+#### **6. 学联专属Sunrise LEBARA折扣**
 
 ![](.topwrite/assets/image_1682192038118.png =245)![](.topwrite/assets/image_1682199817339.png =204)![](.topwrite/assets/image_1682199826817.png =188)
 
@@ -42,7 +42,7 @@
 
 ^
 
-#### **学联专属Swisscare折扣**
+#### **7. 学联专属Swisscare折扣**
 
 ![](.topwrite/assets/image_1682925725457.png =210)![](.topwrite/assets/image_1682200044731.png =271)
 
@@ -52,7 +52,7 @@
 
 ^
 
-#### **学联伙伴intermezzo租房**
+#### **8. 学联伙伴intermezzo租房**
 
 <https://forum.acssz.org/d/386>
 
