--- a/13赴瑞机票.md
+++ b/13赴瑞机票.md
@@ -178,7 +178,7 @@
   承运航司：[中国国际航空CA](https://www.airchina.com.cn/)、[北欧航空SK](https://www.flysas.com/cn-zh/)、[瑞士国际航空LX](https://www.swiss.com/cn/zh/homepage)等
   单程价格：中国国际航空：约8-9k；北欧航空：约4-6k
 
-此外，还有经华沙肖邦WAW转机的选择，但鉴于波兰航空LO疫情期间的种种“操作”，及其安排的看起来十分不靠谱的航班计划（5月1日起每周4班华沙⇄北京，其中2班在首都机场，2班在大兴机场），我们目前不建议选择该路线赴瑞（若后期其计划的航班均正常执行，则可以考虑，但据反馈该航司在航班取消时操作退款速度极慢）。
+此外，还有达成波兰航空LO的航班经华沙肖邦WAW转机的选择可以考虑，但据反馈该航司在航班取消时操作退款速度极慢。
 
 #### **2.4 经中东转机赴瑞**
 
