--- a/11行李准备.md
+++ b/11行李准备.md
@@ -5,7 +5,7 @@
 **证件**：护照，身份证，驾照及公证件，带齐注册所需的所有文件。
 关于驾照：
 ※中国驾照在一年内配合有效认证/公证翻译文件，在瑞士是有效的。这个“认证/公证翻译件”对于不同的租车公司来说要求不一样，有的只要翻译，有的要公证翻译，有的要具有外交效力的认证翻译。国内租租车网站上有一个“国际驾照认证件”，据说被认可度很高。
-※在苏黎世的第一年，建议在苏黎世交管局办理转驾照手续。如果没有在一年内办理转驾手续，转驾照需要通过一个特殊的路考(Kontrollfahrt)，重点不在汽车操控而在于对当地交规的理解。路考一旦挂科，国内驾照立即失效且不能补考，得从零开始学瑞士驾照。
+※在苏黎世的第一年，建议在苏黎世交管局办理转驾照手续（超过一年的话流程会麻烦一些）。转驾照需要通过一个特殊的路考(Kontrollfahrt)，重点不在汽车操控而在于对当地交规的理解。路考一旦挂科，国内驾照立即失效且不能补考，得从零开始学瑞士驾照。
 具体规则请参考以下网址：
 <https://www.eda.admin.ch/countries/china/en/home/services/driving-and-vehicles/driving-ch-foreign-licence.html>
 **证件照**：护照规格（35\*45）5-8张。办理交通卡、签证和换护照时等情况需要。虽然证件照自动拍摄亭很普遍，但价格略贵，而且拍出来巨丑。
