--- a/11行李准备.md
+++ b/11行李准备.md
@@ -4,8 +4,8 @@
 
 **证件**：护照，身份证，驾照及公证件，带齐注册所需的所有文件。
 关于驾照：
-※中国驾照在一年内配合有效认证/公证翻译文件，在瑞士是有效的。这个“认证/公证翻译件”对于不同的租车公司来说要求不一样，有的只要翻译，有的要公证翻译，有的要具有外交效力的认证翻译。国内租租车网站上有一个“国际驾照认证件”，据说被认可度很高。
-※在苏黎世的第一年，建议在苏黎世交管局办理转驾照手续（超过一年的话流程会麻烦一些）。转驾照需要通过一个特殊的路考(Kontrollfahrt)，重点不在汽车操控而在于对当地交规的理解。路考一旦挂科，国内驾照立即失效且不能补考，得从零开始学瑞士驾照。
+※在入境瑞士的第一年内，配合认证/公证翻译文件，可以使用中国驾照租车、开车。这个“认证/公证翻译件”对于不同的租车公司来说要求不一样，有的只要翻译，有的要公证翻译，有的要具有外交效力的认证翻译。国内租车网站上有一个“国际驾照认证件”，据说被认可度很高。
+※超过一年后，中国驾照不再有效，必须转为瑞士驾照。转驾照首先需要在Strassenverkehrsamt（交管局）进行公证，然后报名参加瑞士的路考（Kontrollfahrt）。路考重点不在汽车操控而在于对当地交规的理解，推荐先找瑞士本地驾校教练培训后再参加路考。路考一旦挂科，国内驾照立即失效且不能补考，得从理论开始从头再来了。
 具体规则请参考以下网址：
 <https://www.eda.admin.ch/countries/china/en/home/services/driving-and-vehicles/driving-ch-foreign-licence.html>
 **证件照**：护照规格（35\*45）5-8张。办理交通卡、签证和换护照时等情况需要。虽然证件照自动拍摄亭很普遍，但价格略贵，而且拍出来巨丑。
