Update .topwrite/assets/Intermezzo2023Fall.png, 14“云”找房.md, 24找房租房.md Delete .topwrite/assets/f955dec07b4bd04739878aac30dd4b7.png

--- a/14“云”找房.md
+++ b/14“云”找房.md
@@ -19,7 +19,7 @@
 
 此外，你还可以通过**学联合作伙伴Intermezzo租房公司**云找房：
 
-![](.topwrite/assets/f955dec07b4bd04739878aac30dd4b7.png =369)
+:-: ![](.topwrite/assets/Intermezzo2023Fall.png =360)
 
 ^
 
