--- a/30学联服务.md
+++ b/30学联服务.md
@@ -6,19 +6,13 @@
 
 #### **2. 2023苏黎世新生二群**
 
-![](.topwrite/assets/33c3aa92f67fdb0a3553253ac71eceb.png =253)
+![](.topwrite/assets/a47fe0f23bc06a2d80d245a001e92ab.png =274)
 
 ^
 
-#### **3. 2023年苏黎世新生文档（新**）&#x20;
+#### **3. 2023年新生文档**&#x20;
 
 <https://8lrx8emp45.k.topthink.com/@dayihui2023/00huanyingye.html>
-
-^
-
-2022新生手册（旧）
-
-<https://www.acssz.org/service/booklet/>
 
 ^
 
