--- a/28移民局录指纹.md
+++ b/28移民局录指纹.md
@@ -42,6 +42,7 @@
 ![](.topwrite/assets/image_1682631039883.png)
 其中，居留卡背面包含有“ZEMIS Nr.”和“Kant. Referenz”，这两个号码在办理诸多业务时（如：通过Kontakt Formular或电话联系移民局）都需要提供。
 一般地，在瑞留学生获得的居留卡有效期为1年，临近到期时移民局会向你致信（Verfallsanzeige B，此处B对应居留证类型）要求你办理延期，届时按照信中要求，携带相关材料（信中会有说明）到对应的居委会办理即可。根据相关要求，办理延期时账户内余额不得低于21000瑞郎（即：不允许使用先前办理签证时使用的存款证明来办理延期）。关于办理延期可参考：[Verlängerung des Aufenthalts B](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/internationale-kundschaft/verlaengerung_des_aufenthals_b.html)
+在原有居留证过期以后，获得新的居留证以前因故需要离开瑞士的（含回国等），可（须）前往移民局办理返程签证（Return Visa）。该签证为随到随办，无需预约。建议在办理返程签证前致电移民局以确保符合办理条件。
 
 ^
 
