--- a/13赴瑞机票.md
+++ b/13赴瑞机票.md
@@ -15,7 +15,7 @@
 
 #### **1.3 中转路线选择注意事项**
 
-* 注意行李在中转地是否能够直挂（购票时一般会有显示，值机时值机员也会告知）
+* 注意行李在中转地是否能够直挂（购票时一般会有显示，值机时值机员也会告知；**购票时的提示信息仅供参考，如二者有冲突的，以值机员为准**）
 * 注意留足中转时长，一般为稳妥起见（考虑到国内部分机场的滑行效率问题，以及部分中转地机场会对中转旅客进行二次安检，同时如经申根区内其他城市转机的还需要在中转地办理入境手续），以2h以上为宜；如行李不能直挂的，还需进一步留足时间以确保能准时搭乘后续航班
 
 #### **1.4 购票时利用好留学生身份优势（留学生票**）
