--- a/10申请签证.md
+++ b/10申请签证.md
@@ -16,7 +16,7 @@
 * 本科毕业证（如果毕业证不是英文或德文的，需要公证，两个学校要求有点不一样，请在链接里仔细查看，一般公证需要较长时间，请合理安排时间）
 * 动机信
 * 毕业计划（**避免表达留瑞意向**）
-* 银行存款（请存入移民局[接受的银行](https://www.finma.ch/en/~/media/finma/dokumente/bewilligungstraeger/pdf/beh.pdf?la=de)中）
+* 银行存款（请存入移民局[接受的银行](https://www.finma.ch/en/~/media/finma/dokumente/bewilligungstraeger/pdf/beh.pdf?la=de)中，2023年5月名单包含：建行、工行和中行）
 
 > **ETH要求的申请材料（注意本科生和硕士生不一样**）<https://ethz.ch/en/studies/international/after-admission/immigration/visa.html>
 >
