--- a/14“云”找房.md
+++ b/14“云”找房.md
@@ -27,18 +27,16 @@
 
 * 其它WG租房网站：
 
-> <https://www.wohnen.ethz.ch/en/search-accommodation.html>
+> [www.wg.zimmer.ch ](http://www.wg.zimmer.ch )
+> [www.wg-gesucht.de ](http://www.wg-gesucht.de )
 >
-> <https://www.wgzimmer.ch/wgzimmer.html>
->
+> （WG是德语Wohngemeinschaft的缩写，译为共用公寓/合租房）
+> <https://flatfox.ch/c/en/>
 > <http://www.marktplatz.uzh.ch/Biete/wohnungen>
 >
-> <http://www.students.ch/wohnen/list >
->
+> <http://www.students.ch/wohnen/list> 
 > <https://wohnen.ethz.ch/index.php?act=searchoffer>
->
 > <https://en.comparis.ch/immobilien/search>
->
 > <http://www.ronorp.net/zuerich/dach-ueber-dem-kopf>
 >
 > <https://www.homegate.ch/en>
@@ -53,5 +51,4 @@
 * debit储蓄卡可以正式汇款/转账（Zahlung），但Prepaid卡不行。请避免将大量金额一次性充入Prepaid卡，否则之后将无法进行正式转账（如使用Einzahlungsschein交房租，交学费等）且无法转回Debit卡，而只能自己购物消费或使用Twint进行非正式场合的转账交易；
 * 和他人合租时，应避免“多人将租金/押金转到一位房客的私人账户后，再由该房客统一汇款”的转账方式，而应该由各位房客分别且独立地对公转账，以避免不必要的资金往来纠纷。
 
-^
 ^
