--- a/21交通票.md
+++ b/21交通票.md
@@ -52,7 +52,7 @@ ZVV使用分区计价的原则([交通分区地图](https://www.zvv.ch/zvv/en/tr
 
 SwissPass可在线下网点办理，需要**护照**和**一张签证照片**，还需要你的**居住地址或c/o地址**用于邮寄实体SwissPass卡。办理SwissPass时**应该同时办理前文所述的**[区域年票或月票](https://www.zvv.ch/zvv/en/travelcards-and-tickets/travelcards/networkpass.html)，有需要还可以办理半价卡等，这些都可在同一个柜台完成。
 
-> 按自己日常行动覆盖区域买**相应数量**区域的票：如平时你只在110区生活及学习，那只需要买110区（即2个区）的年票/月票；如果你住在Winterthur，但需要来110区上课，中间会途经121区和122区，那么就需要购买覆盖2（110区）+1（121区）+1（122区）+2（120区）=6 个区的年票/月票。
+> 按自己日常行动覆盖区域买**相应数量**区域的票：如平时你只在110区生活及学习，那只需要买110区（即2个区）的年票/月票；如果你住在Winterthur，但需要来110区上课，中间会途经121区和122区，那么就需要购买覆盖2（110区）+1（121区）+1（122区）+2（120区）=6 个区的年票/月票。[详见苏黎世地区交通分区地图](https://www.zvv.ch/zvv/en/travelcards-and-tickets/zones/zone-maps.html)
 
 ^
 
