--- a/21交通票.md
+++ b/21交通票.md
@@ -36,8 +36,8 @@ ZVV使用分区计价的原则（[详见苏黎世地区交通分区地图](https
 
 对于去其它城市的旅行需求，则需要在SBB APP上或者SBB网站购买相应的火车票。此时还有两种卡可以提供优惠。
 
-1. 半价卡 [Half Fare Travelcard](https://www.sbb.ch/en/travelcards-and-tickets/railpasses/half-fare-travelcard.html): 所有买票半价
-2. 七点卡 [seven25 Travelcard](https://www.sbb.ch/en/travelcards-and-tickets/railpasses/seven25-travelcard.html)： 适用于25岁及以下，晚上七点到早上五点免费乘车
+1. 半价卡 [Half Fare Travelcard](https://www.sbb.ch/en/travelcards-and-tickets/railpasses/half-fare-travelcard.html)：所有买票半价
+2. 七点卡 [seven25 Travelcard](https://www.sbb.ch/en/travelcards-and-tickets/railpasses/seven25-travelcard.html)：适用于25岁及以下，晚上七点到早上五点免费乘车
 3. 七点卡从2023年六月开始变成 "Night GA Travelcard"，99CHF每年，使用的条件会不会改变还不知道
 
 ^
