--- a/21交通票.md
+++ b/21交通票.md
@@ -2,9 +2,9 @@
 
 苏黎世的日常出行中与下面三个名字密不可分：
 
-1. 苏黎世交通网络 [ZVV](https://www.zvv.ch/zvv/en/home.html)
-2. 瑞士联邦铁路 [SBB](https://www.sbb.ch/en)
-3. 公交身份卡 [SwissPass](https://www.swisspass.ch/info/welcome)
+* 苏黎世交通网络 [ZVV](https://www.zvv.ch/zvv/en/home.html)
+* 瑞士联邦铁路 [SBB](https://www.sbb.ch/en)
+* 公交身份卡 [SwissPass](https://www.swisspass.ch/info/welcome)
 
 SBB是瑞士铁路系统，负责全瑞的火车运行以及瑞士与欧洲各国之间的火车交通。ZVV可以理解为苏黎世区域所有公共交通提供商的联合会，整合了苏黎世区域铁路、电车、公交、船，缆车等所有公共交通资源。SwissPass是一张实名卡，购买的[区域年票或月票](https://www.zvv.ch/zvv/en/travelcards-and-tickets/travelcards/networkpass.html)都可以绑定在这张卡上。
 
@@ -36,9 +36,9 @@ ZVV使用分区计价的原则（[详见苏黎世地区交通分区地图](https
 
 对于去其它城市的旅行需求，则需要在SBB APP上或者SBB网站购买相应的火车票。此时还有两种卡可以提供优惠。
 
-1. 半价卡 [Half Fare Travelcard](https://www.sbb.ch/en/travelcards-and-tickets/railpasses/half-fare-travelcard.html)：所有买票半价
-2. 七点卡 [seven25 Travelcard](https://www.sbb.ch/en/travelcards-and-tickets/railpasses/seven25-travelcard.html)：适用于25岁及以下，晚上七点到早上五点免费乘车
-3. 七点卡从2023年六月开始变成 "Night GA Travelcard"，99CHF每年，使用的条件会不会改变还不知道
+* 半价卡 [Half Fare Travelcard](https://www.sbb.ch/en/travelcards-and-tickets/railpasses/half-fare-travelcard.html)：所有买票半价
+* 七点卡 [seven25 Travelcard](https://www.sbb.ch/en/travelcards-and-tickets/railpasses/seven25-travelcard.html)：适用于25岁及以下，晚上七点到早上五点免费乘车
+* 七点卡从2023年六月开始变成 "Night GA Travelcard"，99CHF每年，使用的条件会不会改变还不知道
 
 ^
 
