--- a/11国内手机号.md
+++ b/11国内手机号.md
@@ -58,7 +58,7 @@
 
 #### **5. 苹果手机换区**
 
-使用苹果手机的同学，抵达瑞士前可能需要将苹果手机及Apple Store区域切换到瑞士。比如大家在瑞士日常交通中使用的[SBB Mobile](https://www.sbb.ch/de/fahrplan/mobile-fahrplaene/sbb-mobile.html)和[ZVV-App](https://www.zvv.ch/zvv/de/service/apps/zvv-app.html)等在中国区域的Apple Store中是无法搜到的。
+使用苹果手机的同学请在抵达瑞士前将苹果手机及Apple Store区域切换到瑞士。比如大家在瑞士日常交通中使用的[SBB Mobile](https://www.sbb.ch/de/fahrplan/mobile-fahrplaene/sbb-mobile.html)和[ZVV-App](https://www.zvv.ch/zvv/de/service/apps/zvv-app.html)等在中国区域的Apple Store中是无法搜到的。
 Apple Setting：Setting -> Language& Region -> Region Apple Store：Apple Store -> Profile Picture(Up Right) -> Profile ID (Apple ID) -> Country/ Region&#x20;
 
 苹果手机型号不同，以上设置可能略微有差别。
