--- a/11国内手机号.md
+++ b/11国内手机号.md
@@ -58,7 +58,7 @@
 
 #### **5. 苹果手机换区**
 
-使用苹果手机的同学请在抵达瑞士前将苹果手机及Apple Store区域切换到瑞士。比如大家在瑞士日常交通中使用的[SBB Mobile](https://www.sbb.ch/de/fahrplan/mobile-fahrplaene/sbb-mobile.html)和[ZVV-App](https://www.zvv.ch/zvv/de/service/apps/zvv-app.html)等在中国区域的Apple Store中是无法搜到的。
+使用苹果手机的同学请在抵达瑞士前**将苹果手机及Apple Store区域切换到瑞士**。比如大家在瑞士日常交通中使用的[SBB Mobile](https://www.sbb.ch/de/fahrplan/mobile-fahrplaene/sbb-mobile.html)和[ZVV-App](https://www.zvv.ch/zvv/de/service/apps/zvv-app.html)等在中国区域的Apple Store中是无法搜到的。
 Apple Setting：Setting -> Language& Region -> Region Apple Store：Apple Store -> Profile Picture(Up Right) -> Profile ID (Apple ID) -> Country/ Region&#x20;
 
 苹果手机型号不同，以上设置可能略微有差别。
@@ -67,4 +67,4 @@ Apple Setting：Setting -> Language& Region -> Region Apple Store：Apple Store 
 
 #### **6. 安卓手机谷歌框架**
 
-使用安卓手机的同学请在抵达瑞士前开启安卓手机内的**谷歌基础服务**，以便于通过谷歌Play Store安装瑞士生活常用的APP（如[SBB Mobile](https://www.sbb.ch/de/fahrplan/mobile-fahrplaene/sbb-mobile.html)和[ZVV-App](https://www.zvv.ch/zvv/de/service/apps/zvv-app.html)等）。常说的谷歌三件套（google service framework，google play service，google play store），大家最好在国内已安装好。
+使用安卓手机的同学请在抵达瑞士前**开启安卓手机内的谷歌基础服务**，以便于通过谷歌Play Store安装瑞士生活常用的APP（如[SBB Mobile](https://www.sbb.ch/de/fahrplan/mobile-fahrplaene/sbb-mobile.html)和[ZVV-App](https://www.zvv.ch/zvv/de/service/apps/zvv-app.html)等）。常说的谷歌三件套（google service framework，google play service，google play store），大家最好在国内已安装好。
