--- a/14“云”找房.md
+++ b/14“云”找房.md
@@ -15,7 +15,7 @@
 * **Living Sceinece**: <https://www.livingscience.ch/wohnen-studieren-zuerich/?L=0> 有基本家具，拎包入住（仅限ETH学生）
 * **学生WOKO**：<http://www.woko.ch/> 有基本家具，拎包入住。年龄限制，28或以下。若博士在28岁前入住，之后可以继续续住。博士年收入超过26,400CHF，每月要多交100CHF
 * **学生JUWO**: <http://www.juwo.ch/> 没有家具。年龄限制（16-28）；年收入不能超过30,000瑞郎
-* **学联论坛**上租房信息：[https://forum.acssz.org/](https://forum.acssz.org/t/house)
+* **学联论坛**上租房信息：<https://forum.acssz.org/>
 
 此外，你还可以通过**学联合作伙伴Intermezzo租房公司**云找房：
 
@@ -32,7 +32,6 @@
 >
 > （WG是德语Wohngemeinschaft的缩写，译为共用公寓/合租房）
 > <https://flatfox.ch/c/en/>
-> <http://www.marktplatz.uzh.ch/Biete/wohnungen>
 >
 > <http://www.students.ch/wohnen/list> 
 > <https://wohnen.ethz.ch/index.php?act=searchoffer>
