--- a/24找房租房.md
+++ b/24找房租房.md
@@ -59,12 +59,11 @@ Alex将在微信账户的**朋友圈**中发布所有可用的房间。每个房
 
 <https://forum.acssz.org/>
 
-***
+^
 
-**其他渠道**
+**其它渠道**
 
-> [www.wg.zimmer.ch ](http://www.wg.zimmer.ch )
-> [www.wg-gesucht.de ](http://www.wg-gesucht.de )
+> <https://www.wgzimmer.ch/home.html>
 >
 > （WG是德语Wohngemeinschaft的缩写，译为共用公寓/合租房）
 > <https://flatfox.ch/c/en/>
@@ -75,6 +74,8 @@ Alex将在微信账户的**朋友圈**中发布所有可用的房间。每个房
 > <http://www.ronorp.net/zuerich/dach-ueber-dem-kopf>
 >
 > <https://www.homegate.ch/en>
+>
+> <https://www.wg-gesucht.de/>
 
 ^
 
