--- a/24找房租房.md
+++ b/24找房租房.md
@@ -22,16 +22,17 @@
 
 **常见渠道**
 
-| 途径/渠道                                   | 简介                                                             | 优点                                                                     | 缺点                                                   | 链接                                                                                                                                                                                                                                               |
-| --------------------------------------- | -------------------------------------------------------------- | ---------------------------------------------------------------------- | ---------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| Student Village&#xA;&#xA;Living Science | ETH学生宿舍                                                        | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 可靠&#xA;4\. 有基本家具&#xA;5\. 在Hönggerberg校区 | 1. 竞争激烈&#xA;2\. 多人共享公共区域                             | <https://studentvillage.ch/en/>&#xA;&#xA;<https://www.livingscience.ch/wohnen-studieren-zuerich/?L=0>&#xA;&#xA;一般不太可能通过SV官网找到房，而是通过[Facebook群组](https://www.facebook.com/groups/934381236673846)和微信群。微信群名为”SV的宝宝们“，长期500人满员，可以联系在群中的朋友在有空位时将你拉入。 |
-| WOKO                                    | 苏黎世学生租房网站                                                      | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 可靠&#xA;4\. 有基本家具                        | 1. 竞争激烈&#xA;2\. 大多需提早起租 3. 多人共享公共区域（如厨房、浴室等）         | <https://www.woko.ch>                                                                                                                                                                                                                            |
-| JUWO                                    | 青年住房组织，适合年龄在16-28岁，年收入小于30000瑞，处于学习或者实习阶段的青年。                  | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 可靠&#xA;4\. 适合28岁以下的同学                   | 1. 竞争激烈&#xA;2\. 等待时间长&#xA;3\. 没有家具                   | <https://www.juwo.ch>                                                                                                                                                                                                                            |
-| WFSS                                    | 主要为学生提供在校外和校内的住房选择，适合students, PHD's, Trainee, Guest lectures。 | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 可靠                                      | 1. 竞争激烈&#xA;2\. 多人共享公共区域                             | <https://www.wfss.ch/de/>                                                                                                                                                                                                                        |
-| 学校推荐网站                                  | 大多是当地居民和中介发布的租房信息。                                             | 1. 房源丰富&#xA;2\. 价格相对合理&#xA;3\. 相对可靠                                    | 1. 有时会有租房骗子&#xA;2\. 很多房东只会德语&#xA;3\. 回复缓慢            | <https://wohnen.ethz.ch/index.php?act=searchoffer>                                                                                                                                                                                               |
-| ST-JUSTIN                               | 由Christian Catholic Oeuvre St-Justin经营的国际学生宿舍，有65间面积大小不同的学生房间。 | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 国籍多样化&#xA;4\. 距离ETH和UZH主校仅2公里           | 1. 竞争激烈&#xA;2\. 秋季需4.15就申请&#xA;3\. 多人共享公共区域（如厨房、浴室等） | <https://justinus.ch/en/?cn-reloaded=1>                                                                                                                                                                                                          |
-| 学联合作伙伴&#xA;INTERMEZZO                   | 是一家由瑞士本地致力于利用苏黎世地区空置物业和公寓提供中短租的小型租房公司。                         | 1. 价格相对优惠&#xA;2\. 沟通更加方便&#xA;3\. 有基本家具                                 | 1. 竞争激烈（由其是8/9月）&#xA;                                | Alex小哥，请用英语或德语沟通，vx号：Alex\_Intermezzo                                                                                                                                                                                                            |
-| 群内转租                                    |                                                                | 1. 中国人之间转租，沟通方便                                                        | 1. 价格区间波动范围大&#xA;2\. 需甄别真实性                          | &#xA;&#xA;                                                                                                                                                                                                                                       |
+| 途径/渠道                                    | 简介                                                             | 优点                                                                     | 缺点                                                   | 链接                                                                                                                                                                                                                                               |
+| ---------------------------------------- | -------------------------------------------------------------- | ---------------------------------------------------------------------- | ---------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| Student Village&#xA;&&#xA;Living Science | ETH学生宿舍                                                        | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 可靠&#xA;4\. 有基本家具&#xA;5\. 在Hönggerberg校区 | 1. 竞争激烈&#xA;2\. 多人共享公共区域                             | <https://studentvillage.ch/en/>&#xA;&#xA;<https://www.livingscience.ch/wohnen-studieren-zuerich/?L=0>&#xA;&#xA;一般不太可能通过SV官网找到房，而是通过[Facebook群组](https://www.facebook.com/groups/934381236673846)和微信群。微信群名为”SV的宝宝们“，长期500人满员，可以联系在群中的朋友在有空位时将你拉入。 |
+| WOKO                                     | 苏黎世学生租房网站                                                      | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 可靠&#xA;4\. 有基本家具                        | 1. 竞争激烈&#xA;2\. 大多需提早起租 3. 多人共享公共区域（如厨房、浴室等）         | <https://www.woko.ch>                                                                                                                                                                                                                            |
+| JUWO                                     | 青年住房组织，适合年龄在16-28岁，年收入小于30000瑞，处于学习或者实习阶段的青年。                  | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 可靠&#xA;4\. 适合28岁以下的同学                   | 1. 竞争激烈&#xA;2\. 等待时间长&#xA;3\. 没有家具                   | <https://www.juwo.ch>                                                                                                                                                                                                                            |
+| WFSS                                     | 主要为学生提供在校外和校内的住房选择，适合students, PHD's, Trainee, Guest lectures。 | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 可靠                                      | 1. 竞争激烈&#xA;2\. 多人共享公共区域                             | <https://www.wfss.ch/de/>                                                                                                                                                                                                                        |
+| 学校推荐网站                                   | 大多是当地居民和中介发布的租房信息。                                             | 1. 房源丰富&#xA;2\. 价格相对合理&#xA;3\. 相对可靠                                    | 1. 有时会有租房骗子&#xA;2\. 很多房东只会德语&#xA;3\. 回复缓慢            | <https://wohnen.ethz.ch/index.php?act=searchoffer>                                                                                                                                                                                               |
+| ST-JUSTIN                                | 由Christian Catholic Oeuvre St-Justin经营的国际学生宿舍，有65间面积大小不同的学生房间。 | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 国籍多样化&#xA;4\. 距离ETH和UZH主校仅2公里           | 1. 竞争激烈&#xA;2\. 秋季需4.15就申请&#xA;3\. 多人共享公共区域（如厨房、浴室等） | <https://justinus.ch/en/?cn-reloaded=1>                                                                                                                                                                                                          |
+| 学联合作伙伴&#xA;INTERMEZZO                    | 是一家由瑞士本地致力于利用苏黎世地区空置物业和公寓提供中短租的小型租房公司。                         | 1. 价格相对优惠&#xA;2\. 沟通更加方便&#xA;3\. 有基本家具                                 | 1. 竞争激烈（由其是8/9月）&#xA;                                | Alex小哥，请用英语或德语沟通，微信号：Alex\_Intermezzo                                                                                                                                                                                                            |
+| 微信群内转租                                   | 微信群上经常会有同学发布出房信息，你也可以发布求房信息                                    | 中国人之间转租，沟通方便                                                           | 1. 价格波动范围大&#xA;2\. 需甄别真实性                            | &#xA;微信群（新生群、二手群、学联活动群等）&#xA;                                                                                                                                                                                                                    |
+| 学联论坛                                     | 学联论坛上经常会有同学发布出房信息，你也可以发布求房信息                                   | 中国人之间转租，沟通方便                                                           | 1. 价格波动范围大&#xA;2\. 需甄别真实性                            | <https://forum.acssz.org/>\*\*\*\*                                                                                                                                                                                                               |
 
 ***
 
@@ -55,23 +56,14 @@ Alex将在微信账户的**朋友圈**中发布所有可用的房间。每个房
 
 ^
 
-**学联论坛上租房信息**
-
-<https://forum.acssz.org/>
-
-^
-
 **其它渠道**
 
-> <https://www.wfss.ch/>
->
 > <https://www.wgzimmer.ch/home.html>
 >
 > （WG是德语Wohngemeinschaft的缩写，译为共用公寓/合租房）
 > <https://flatfox.ch/c/en/>
 >
 > <http://www.students.ch/wohnen/list> 
-> <https://wohnen.ethz.ch/index.php?act=searchoffer>
 > <https://en.comparis.ch/immobilien/search>
 > <http://www.ronorp.net/zuerich/dach-ueber-dem-kopf>
 >
